[package]
name = "timeknight"
version = "0.1.2"
edition = "2021"

[dependencies]
structopt="0.3.25"
log = "0.4.0"
env_logger = "0.9.0"
crossterm = "0.22.1"
tui = { version = "^0", default-features = false, features = ["crossterm"] }
serde = "1.0.136"
unicode-width = "0.1"
humantime = "2.1.0"
ron = "0.7.0"
num = "0.4.0"
dirs = "4.0.0"
chrono = "0.4"
